# qr-reader-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  python3-pyproject.json  requirements.txt
flatpak/: com.alukens.qr-cli.yaml
scripts/: build-flatpak.sh
snap/: snapcraft.yaml
src/qr_reader_cli/: main.py
tests/: test_main.py
