[project]
name = "qr-reader-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Lukens",email = "alex.lukens@canonical.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pyzbar (>=0.1.9,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
