
[tool.poetry]

name = "qr-reader-cli"
version = "0.1.0"
description = "A QR Code reader on the command line."
authors = ["Alex Lukens <alexdlukens@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
opencv-python-headless = ">=4.11.0.86,<5.0.0.0"
python = ">=3.12"
rich = "^14.0.0"
rich-pixels = "^3.0.1"
questionary = "^2.1.0"
opencv-contrib-python-headless = "^4.11.0.86"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.11"
