
[project]

name = "qr-reader-cli"
version = "0.1.0"
description = "A QR Code reader on the command line."
authors = [{ name = "Alex Lukens", email = "alexdlukens@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "opencv-python-headless>=4.11.0.86,<5.0.0.0",
    "rich>=14.0.0,<15.0.0",
    "rich-pixels>=3.0.1,<4.0.0",
    "questionary>=2.1.0,<3.0.0",
    "opencv-contrib-python-headless>=4.11.0.86,<5.0.0.0",
]

[project.scripts]
qr-cli = "qr_reader_cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["pytest>=8.3.5,<9.0.0", "ruff>=0.11.11,<1.0.0"]
